package hellgren.interface_segregation.classes;

public interface AthleteInterface {
    void compete();
}
