package hellgren.interface_segregation.classes;

public interface RunnerInterface extends AthleteInterface {
    void run();
}
