package hellgren.interface_segregation.classes;

public interface SwimmerInterface extends AthleteInterface {
    void swim();
}
