package hellgren.interface_segregation.classes;

public interface ToExtensiveAthleteInterface {
    void compete();
    void swim();
    void run();
}
